--- a/index.html
+++ b/index.html
@@ -25,42 +25,44 @@
             <div class="reservation">
                 <h3>Réservez le menu qui vous convient</h3>
                 <p>Découvrez des restaurants d'exception séléctionnés par nos soin</p>
-                <button class="btn">Explorer nos restaurants</button>
+                <button class="boutonGeneral">Explorer nos restaurants</button>
             </div>
         </section>
         <section>
             <div class="fonction">
                 <h2 class="fonction__titre">Fonctionnement</h2>
-                <div class="fonction__step">
-                    <span class="fonction__step__number">1</span>
-                    <div class="fonction__step__icone">
-                        <i class="fa-mobile-alt fas" aria-hidden="true"></i>
+                <div class="fonctionBloc">
+                    <div class="fonction__step">
+                        <span class="fonction__step__number">1</span>
+                        <div class="fonction__step__icone">
+                            <i class="fa-mobile-alt fas" aria-hidden="true"></i>
+                        </div>
+                        <span class="fonction__step__titre">Choississez un restaurant</span>
                     </div>
-                    <span class="fonction__step__titre">Choississez un restaurant</span>
-                </div>
-                <div class="fonction__step">
-                    <span class="fonction__step__number">2</span>
-                    <div class="fonction__step__icone"> 
-                        <i class="fa-list-ul fas" aria-hidden="true"></i>
+                    <div class="fonction__step">
+                        <span class="fonction__step__number">2</span>
+                        <div class="fonction__step__icone"> 
+                            <i class="fa-list-ul fas" aria-hidden="true"></i>
+                        </div>
+                        <span class="fonction__step__titre">Composez votre menu</span>
                     </div>
-                    <span class="fonction__step__titre">Composez votre menu</span>
-                </div>
-                <div class="fonction__step">
-                    <span class="fonction__step__number">3</span>
-                    <div class="fonction__step__icone">
-                        <i class="fa-store fas" aria-hidden="true"></i>
+                    <div class="fonction__step">
+                        <span class="fonction__step__number">3</span>
+                        <div class="fonction__step__icone">
+                            <i class="fa-store fas" aria-hidden="true"></i>
+                        </div>
+                        <span class="fonction__step__titre">Dégustez au restaurant</span>
                     </div>
-                    <span class="fonction__step__titre">Dégustez au restaurant</span>
                 </div>
             </div>
         </section>
         <section class="restaurant">
             <div>
-                <h2>Restaurants</h2>
+                <h2 class="restaurant__blocTitre">Restaurants</h2>
                 <div class="restaurant__bloc">
                     <a href="menu1.html">
                         <figure class="restaurant__menu">
-                            <img class="restaurant__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                            <img class="restaurant__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo restaurant La palette du goût">
                             <span class="restaurant__news">Nouveau</span>
                             <figcaption class="restaurant__titre">
                                 <h3 class="restaurant__grosTitre">La palette du goût</h3>
@@ -74,7 +76,7 @@
                     </a>
                     <a href="menu2.html">
                         <figure class="restaurant__menu">
-                            <img class="restaurant__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <img class="restaurant__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo restaurant La note enchantée">
                             <span class="restaurant__news">Nouveau</span>
                             <figcaption class="restaurant__titre">
                                 <h3 class="restaurant__grosTitre">La note enchantée</h3>
@@ -88,7 +90,7 @@
                     </a>
                     <a href="menu3.html">
                         <figure class="restaurant__menu">
-                            <img class="restaurant__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <img class="restaurant__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo restaurant A la francaise">
                             <figcaption class="restaurant__titre">
                                 <h3 class="restaurant__grosTitre">A la francaise</h3>
                                 <p class="restaurant__localisation">Cité rouge</p>
@@ -101,7 +103,7 @@
                     </a>
                     <a href="menu4.html">
                         <figure class="restaurant__menu" >
-                            <img class="restaurant__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <img class="restaurant__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo restaurant Le délice des sens">
                             <figcaption class="restaurant__titre">
                                 <h3 class="restaurant__grosTitre">Le délice des sens</h3>
                                 <p class="restaurant__localisation">Folie-Méricourt</p>
