--- a/menu1.html
+++ b/menu1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "la palette de goût" - ohmyfood</title>
@@ -19,120 +20,122 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>        
     </header>
-    <img class="imageHaute" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo restaurant La palette du goût">
     <main>
         <section class="sectionMenu">
             <div class="titre__restaurant">
                 <h2>La palette du goût</h2>
-                <i class="fa-heart far"></i>
-                <i class="fa-heart fas"></i>
+                <div class="titre__blocCoeur">
+                    <i class="fa-heart far titre__coeurBlanc"></i>
+                    <i class="fa-heart fas titre__coeurRose"></i>
+                </div>
             </div>
-            <div>
+            <div class="menuBloc">
                 <div class="menu">
-                    <h3>ENTREES</h3>
+                    <h3 class="menu__titre">ENTREES</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'espelette</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Fricassée d'escargot</h4>
+                            <p class="menu__textNormal">Au piment d'espelette</p>
                         </div>
-                        <div>25 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>25 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Oeuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de poireaux</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Foie gras de canard mi-cuit</h4>
+                            <p class="menu__textNormal">Et ses copeaux de truffe noire</p>
                         </div>
-                        <div>20 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Oeuf au plat</h4>
+                            <p class="menu__textNormal">Assaisonné à la truffe sur lit de poireaux</p>
+                        </div>
+                        <div class="menu__prix"><strong>20 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>    
                 </div>
                 <div class="menu">
-                    <h3>PLATS</h3>
+                    <h3 class="menu__titre">PLATS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Filet de boeuf aux herbes</h4>
+                            <p class="menu__textNormal">Accompagné de sa ribambelle de légumes</p>
                         </div>
-                        <div>40 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Parmentier de queue de boeuf</h4>
-                            <p>A la truffe noire sur sa purée de panais</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>40 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Filet de turbot</h4>
-                            <p>Aux agrumes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Parmentier de queue de boeuf</h4>
+                            <p class="menu__textNormal">A la truffe noire sur sa purée de panais</p>
                         </div>
-                        <div>44 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Filet de turbot</h4>
+                            <p class="menu__textNormal">Aux agrumes</p>
+                        </div>
+                        <div class="menu__prix"><strong>44 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>      
                 </div>
                 <div class="menu">
-                    <h3>DESSERTS</h3>
+                    <h3 class="menu__titre">DESSERTS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Paris-Brest</h4>
-                            <p>Revisité</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Paris-Brest</h4>
+                            <p class="menu__textNormal">Revisité</p>
                         </div>
-                        <div>18 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Macaron au chocolat d'exception</h4>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div>22 €</div>
+                        <div class="menu__prix"><strong>18 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Mousse au chocolat</h4>
-                            <p>Au piment d'espelette et à la truffe noire</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Macaron au chocolat d'exception</h4>
+                            <p class="menu__textNormal">Et glace à la vanille de Madagascar</p>
                         </div>
-                        <div>23 €</div>
+                        <div class="menu__prix"><strong>22 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Mousse au chocolat</h4>
+                            <p class="menu__textNormal">Au piment d'espelette et à la truffe noire</p>
+                        </div>
+                        <div class="menu__prix"><strong>23 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
                 </div>
             </div>
-            <div>
-                <button class="btn">Commander</button>
+            <div class="boutonCommander">
+                <button class="boutonGeneral">Commander</button>
             </div>
         </section>
     </main>
