--- a/menu2.html
+++ b/menu2.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "la note enchantée" - ohmyfood</title>
@@ -19,130 +20,132 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div> 
     </header>     
-    <img class="imageHaute" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo resturant La note enchantée">
     <main>
         <section class="sectionMenu">
             <div class="titre__restaurant">
                 <h2>La note enchantée</h2>
-                <i class="fa-heart far"></i>
-                <i class="fa-heart fas"></i>
+                <div class="titre__blocCoeur">
+                    <i class="fa-heart far titre__coeurBlanc"></i>
+                    <i class="fa-heart fas titre__coeurRose"></i>
+                </div>
             </div>
-            <div>
+            <div class="menuBloc">
                 <div class="menu">
-                    <h3>ENTREES</h3>
+                    <h3 class="menu__titre">ENTREES</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Raviole de foie gras</h4>
-                            <p>Accompagnés de leur crème à la truffe</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Raviole de foie gras</h4>
+                            <p class="menu__textNormal">Accompagnés de leur crème à la truffe</p>
                         </div>
-                        <div>25 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Caviar osciètre</h4>
-                            <p>Sur blini à la farine de blé noir</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>25 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Homard et espuma</h4>
-                            <p>Marinés aux zests d'orange</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Caviar osciètre</h4>
+                            <p class="menu__textNormal">Sur blini à la farine de blé noir</p>
                         </div>
-                        <div>20 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Foie gras de canard cuit entier</h4>
-                            <p>Confiture de figue et pain toasté</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Homard et espuma</h4>
+                            <p class="menu__textNormal">Marinés aux zests d'orange</p>
                         </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>20 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Foie gras de canard cuit entier</h4>
+                            <p class="menu__textNormal">Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>    
                 </div>
                 <div class="menu">
-                    <h3>PLATS</h3>
+                    <h3 class="menu__titre">PLATS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Noix de coquilles Saint-Jacques</h4>
-                            <p>Sur lit de purée de céleri-rave</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Noix de coquilles Saint-Jacques</h4>
+                            <p class="menu__textNormal">Sur lit de purée de céleri-rave</p>
                         </div>
-                        <div>40 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Langoustine poêlée</h4>
-                            <p>Purée de patate douce</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>40 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Mijoté de queue de boeuf</h4>
-                            <p>Et riz sauvage aux zestes de citron</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Langoustine poêlée</h4>
+                            <p class="menu__textNormal">Purée de patate douce</p>
                         </div>
-                        <div>44 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Mijoté de queue de boeuf</h4>
+                            <p class="menu__textNormal">Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__prix"><strong>44 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>      
                 </div>
                 <div class="menu">
-                    <h3>DESSERTS</h3>
+                    <h3 class="menu__titre">DESSERTS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Macaron noisette et chocolat</h4>
-                            <p>Glace au caramel brun et sel de Guérande</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Macaron noisette et chocolat</h4>
+                            <p class="menu__textNormal">Glace au caramel brun et sel de Guérande</p>
                         </div>
-                        <div>18 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Baba au rhum revesité</h4>
-                            <p>Avec son coulis de citron</p>
-                        </div>
-                        <div>22 €</div>
+                        <div class="menu__prix"><strong>18 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Tarte au citron meringuée</h4>
-                            <p>destructurée</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Baba au rhum revesité</h4>
+                            <p class="menu__textNormal">Avec son coulis de citron</p>
                         </div>
-                        <div>23 €</div>
+                        <div class="menu__prix"><strong>22 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Tarte au citron meringuée</h4>
+                            <p class="menu__textNormal">destructurée</p>
+                        </div>
+                        <div class="menu__prix"><strong>23 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
                 </div>
             </div>
-            <div>
-                <button class="btn">Commander</button>
+            <div class="boutonCommander">
+                <button class="boutonGeneral">Commander</button>
             </div>
         </section>
     </main>
