--- a/menu3.html
+++ b/menu3.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "A la francaise" - ohmyfood</title>
@@ -19,44 +20,46 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>  
     </header>
-    <img class="imageHaute"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+    <img class="imageHaute"src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo restaurant a la française">
     <main>
         <section class="sectionMenu">
             <div class="titre__restaurant">
                 <h2>A la française</h2>
-                <i class="fa-heart far"></i>
-                <i class="fa-heart fas"></i>
+                <div class="titre__blocCoeur">
+                    <i class="fa-heart far titre__coeurBlanc"></i>
+                    <i class="fa-heart fas titre__coeurRose"></i>
+                </div>
             </div>
-            <div>
+            <div class="menuBloc">
                 <div class="menu">
                     <h3 class="menu__titre">ENTREES</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Tartare de poulpe acidulé</h4>
-                            <p>Aux zests d'orange</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Tartare de poulpe acidulé</h4>
+                            <p class="menu__textNormal">Aux zests d'orange</p>
                         </div>
-                        <div>25 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Velouté de légumes d'antan</h4>
-                            <p>Carotte, panais, topinambour</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>25 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Soupe à l'oignon</h4>
-                            <p>Revisité</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Velouté de légumes d'antan</h4>
+                            <p class="menu__textNormal">Carotte, panais, topinambour</p>
                         </div>
-                        <div>20 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Soupe à l'oignon</h4>
+                            <p class="menu__textNormal">Revisité</p>
+                        </div>
+                        <div class="menu__prix"><strong>20 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
@@ -66,31 +69,31 @@
                     <h3 class="menu__titre">PLATS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Coquilles Saint-Jacques</h4>
-                            <p>Accompagné d'une purée de panais</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Coquilles Saint-Jacques</h4>
+                            <p class="menu__textNormal">Accompagné d'une purée de panais</p>
                         </div>
-                        <div>40 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Magret de canard</h4>
-                            <p>Et parmentier de pommes de terres</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>40 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Pigeonneau d'Ille-et Vilaine</h4>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Magret de canard</h4>
+                            <p class="menu__textNormal">Et parmentier de pommes de terres</p>
                         </div>
-                        <div>44 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Pigeonneau d'Ille-et Vilaine</h4>
+                            <p class="menu__textNormal">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="menu__prix"><strong>44 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
@@ -100,39 +103,39 @@
                     <h3 class="menu__titre">DESSERTS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Pétales de viollettes glacés</h4>
-                            <p>Et purée de noisettes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Pétales de viollettes glacés</h4>
+                            <p class="menu__textNormal">Et purée de noisettes</p>
                         </div>
-                        <div>18 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Fondant au chocolat</h4>
-                            <p>Revisité</p>
-                        </div>
-                        <div>22 €</div>
+                        <div class="menu__prix"><strong>18 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Millefeuille croustillant</h4>
-                            <p>Myrtilles et pâtes d'amande</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Fondant au chocolat</h4>
+                            <p class="menu__textNormal">Revisité</p>
                         </div>
-                        <div>23 €</div>
+                        <div class="menu__prix"><strong>22 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Millefeuille croustillant</h4>
+                            <p class="menu__textNormal">Myrtilles et pâtes d'amande</p>
+                        </div>
+                        <div class="menu__prix"><strong>23 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
                 </div>
             </div>
-            <div>
-                <button class="btn">Commander</button>
+            <div class="boutonCommander">
+                <button class="boutonGeneral">Commander</button>
             </div>
         </section>
     </main>
