--- a/menu4.html
+++ b/menu4.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5f1c8b453d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="public/css/style.css">
     <title>Restaurant "Le délice des sens" - ohmyfood</title>
@@ -19,44 +20,46 @@
             <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </div>  
     </header>
-    <img class="imageHaute" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+    <img class="imageHaute" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo resturant Le délice des sens">
     <main>
         <section class="sectionMenu">
             <div class="titre__restaurant">
                 <h2>Le délice des sens</h2>
-                <i class="fa-heart far"></i>
-                <i class="fa-heart fas"></i>
+                <div class="titre__blocCoeur">
+                    <i class="fa-heart far titre__coeurBlanc"></i>
+                    <i class="fa-heart fas titre__coeurRose"></i>
+                </div>
             </div>
-            <div>
+            <div class="menuBloc">
                 <div class="menu">
                     <h3 class="menu__titre">ENTREES</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Tartares de thon</h4>
-                            <p>Assaisonné au yuzu</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Tartares de thon</h4>
+                            <p class="menu__textNormal">Assaisonné au yuzu</p>
                         </div>
-                        <div>25 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Bouchée de homard croustillant</h4>
-                            <p>Et sa farandole de petits légumes</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>25 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Velouté de cèpes</h4>
-                            <p>Aux truffes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Bouchée de homard croustillant</h4>
+                            <p class="menu__textNormal">Et sa farandole de petits légumes</p>
                         </div>
-                        <div>20 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Velouté de cèpes</h4>
+                            <p class="menu__textNormal">Aux truffes</p>
+                        </div>
+                        <div class="menu__prix"><strong>20 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
@@ -66,31 +69,31 @@
                     <h3 class="menu__titre">PLATS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Filet de boeuf aux herbes</h4>
+                            <p class="menu__textNormal">Accompagné de sa ribambelle de légumes</p>
                         </div>
-                        <div>40 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Poulet rôti aux herbes de provence</h4>
-                            <p>Et ses légumes de saison</p>
-                        </div>
-                        <div>35 €</div>
+                        <div class="menu__prix"><strong>40 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Côte de boeuf angus</h4>
-                            <p>Et sa purée de panais</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Poulet rôti aux herbes de provence</h4>
+                            <p class="menu__textNormal">Et ses légumes de saison</p>
                         </div>
-                        <div>44 €</div>
+                        <div class="menu__prix"><strong>35 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Côte de boeuf angus</h4>
+                            <p class="menu__textNormal">Et sa purée de panais</p>
+                        </div>
+                        <div class="menu__prix"><strong>44 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
@@ -100,39 +103,39 @@
                     <h3 class="menu__titre">DESSERTS</h3>
                     <div class="menu__ligneTitre"></div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Farandole de desserts</h4>
-                            <p>Du chef</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Farandole de desserts</h4>
+                            <p class="menu__textNormal">Du chef</p>
                         </div>
-                        <div>18 €</div>
-                        <div>
-                            <i class="fa-check fas"></i>
-                        </div>
-                    </div>
-                    <div class="menu__descision">
-                        <div>
-                            <h4>Crème brulée</h4>
-                            <p>Revisitée</p>
-                        </div>
-                        <div>22 €</div>
+                        <div class="menu__prix"><strong>18 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>
                     <div class="menu__descision">
-                        <div>
-                            <h4>Tiramisu</h4>
-                            <p>A la noisette</p>
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Crème brulée</h4>
+                            <p class="menu__textNormal">Revisitée</p>
                         </div>
-                        <div>23 €</div>
+                        <div class="menu__prix"><strong>22 €</strong></div>
+                        <div>
+                            <i class="fa-check fas"></i>
+                        </div>
+                    </div>
+                    <div class="menu__descision">
+                        <div class="menu__description">
+                            <h4 class="menu__textGras">Tiramisu</h4>
+                            <p class="menu__textNormal">A la noisette</p>
+                        </div>
+                        <div class="menu__prix"><strong>23 €</strong></div>
                         <div>
                             <i class="fa-check fas"></i>
                         </div>
                     </div>  
                 </div>
             </div>
-            <div>
-                <button class="btn">Commander</button>
+            <div class="boutonCommander">
+                <button class="boutonGeneral">Commander</button>
             </div>
         </section>
     </main>
